# 151Trading

./: .env.example  .gitignore  151Trading_plan.docx  DEVELOPMENT_PLAN.md  README.md  docker-compose.yml  pipeline_report.json  run_pipeline_and_trade.py
.github/workflows/: daily-pipeline.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/adapters/brokers/alpaca/: adapter.py
backend/app/adapters/data_providers/: base.py
backend/app/adapters/data_providers/b3_anbima/: adapter.py
backend/app/adapters/data_providers/fiscal_ai/: adapter.py
backend/app/adapters/data_providers/fmp/: adapter.py
backend/app/adapters/data_providers/fred/: adapter.py
backend/app/adapters/data_providers/polygon/: adapter.py
backend/app/adapters/data_providers/reddit/: adapter.py
backend/app/adapters/data_providers/trading_economics/: adapter.py
backend/app/adapters/data_providers/yahoo_finance/: adapter.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: backtests.py  data_ingestion.py  health.py  instruments.py  market_data.py  strategies.py
backend/app/core/: config.py  database.py  logging.py
backend/app/services/backtest/: engine.py
backend/app/services/data_ingestion/: pipeline.py
backend/app/workers/: __init__.py  tasks.py
backend/tests/: conftest.py
backend/tests/unit/: test_equity_strategies.py  test_health.py  test_options_and_vol.py  test_portfolio_optimizer.py  test_sprint2_strategies.py  test_sprint5_6_strategies.py  test_sprint7_8_strategies.py  test_strategy_base.py
docs/: schema_reference.md
infra/docker/: init-db.sql
scripts/: run_sprint2_strategies.py  run_strategies.py  smoke_test_adapters.py  test_live_data.py
shared/schemas/: dataset_manifest.py
strategies/: base.py  requirements.txt
strategies/automation/: daily_pipeline.py
(+29 files in other folders)
