[project]
name = "trading-system"
version = "0.1.0"
description = "151 Trading Strategies - Research and Paper Trading Platform"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    # Data & Analytics
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "duckdb>=0.10.0",
    "pyarrow>=15.0.0",
    # Data Providers
    "yfinance>=0.2.36",
    "fredapi>=0.5.1",
    "polygon-api-client>=1.13.0",
    "praw>=7.7.1",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    # Task Queue
    "celery[redis]>=5.3.6",
    # Cache
    "redis>=5.0.0",
    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    # Observability
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    # Broker
    "alpaca-trade-api>=3.0.2",
    # Utilities
    "python-dotenv>=1.0.1",
    "orjson>=3.9.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
